# rhombus

./: .dockerignore  .gitattributes  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  config.yaml  flake.nix  fly.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  schema.json  todo.md
.github/workflows/: build-docs-pr.yaml  build.yaml  deploy-demo.yaml  deploy-docs.yaml  format.yaml  rust.yaml  web.yaml
.helix/: languages.toml
challenges/my-first-web/: challenge.yaml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/docs/: auth.md  ctftime.md  deploy.md  discord.md  divisions.md  getting-started.md  ip.md  showcase.md
docs/docs/database/: index.md  libsql.md  postgres.md
docs/docs/email/: imap.md  index.md  mailgun.md  smtp.md
docs/docs/uploads/: database.md  index.md  local.md  s3.md
examples/custom-grpc/: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
examples/custom-grpc/proto/: myplugin.proto
examples/custom-grpc/src/: main.rs
examples/demo/: .gitignore  Cargo.toml  app.css  build.rs  config.yaml  package.json  tailwind.config.ts
examples/demo/challenges/: loader.yaml
examples/demo/challenges/my-first-misc/: challenge.yaml
examples/demo/challenges/my-first-pwn/: challenge.yaml
examples/demo/challenges/my-first-web/: challenge.yaml
examples/demo/src/: main.rs
examples/demo/templates/: account-cards.html  footer.html  head.html
examples/external-plugin/: Cargo.toml
examples/external-plugin/src/: main.rs
examples/plugin/: Cargo.toml
examples/plugin/migrations/: standalone.sql
examples/plugin/src/: lib.rs
examples/plugin/templates/: challenges.html  home.html
examples/shuttle/: .gitignore  Cargo.toml
examples/shuttle/src/: main.rs
examples/standalone/: Cargo.toml  config.yaml
examples/standalone/challenges/: loader.yaml
examples/standalone/challenges/my-first-pwn/: challenge.yaml  hello.py
examples/standalone/challenges/my-first-web/: challenge.yaml
examples/standalone/challenges/my-second-pwn/: challenge.yaml
examples/standalone/challenges/new-challenge/: challenge.yaml
examples/standalone/src/: main.rs
examples/with-plugin/: Cargo.toml
examples/with-plugin/src/: main.rs
proto/: rhombus.proto
rhombus/: .gitignore  Cargo.toml  README.md  app.css  app.tsx  build.mjs  build.rs  build.ts  deno.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs  tailwind.config.ts  tsconfig.json
rhombus-build/: Cargo.toml
rhombus-build/assets/: app.css
rhombus-build/src/: lib.rs
rhombus-cli/: Cargo.toml  README.md  build.rs
rhombus-cli/src/: auth.rs  config.rs  main.rs
rhombus-cli/src/admin/: challenges.rs  mod.rs
rhombus-shared/: Cargo.toml  README.md  build.rs
rhombus-shared/src/: challenges.rs  errors.rs  lib.rs
rhombus/.sqlx/: query-b3b4c509e4d6c1bedb25f57d3686a0b7a7d29304cd129f9e2c187556b0b1bc6a.json
rhombus/frontend/: app.tsx  command.tsx  dialog.tsx  utils.tsx
rhombus/locales/de/: main.ftl
rhombus/locales/en/: main.ftl
rhombus/locales/en-GB/: main.ftl
rhombus/locales/en-US/: main.ftl
rhombus/migrations/: 0001_setup.down.sql  0001_setup.sql  0001_setup.up.sql
rhombus/migrations/libsql/: 0001_setup.down.sql  0001_setup.up.sql  seed.sql  test.db
rhombus/migrations/postgresql/: 0001_setup.down.sql  0001_setup.up.sql
rhombus/src/: account.rs  auth.rs  backend_libsql.rs  backend_postgres.rs  builder.rs  cache_layer.rs  challenge_loader_plugin.rs  challenges.rs  command_palette.rs  database.rs  database_upload_provider.rs  errors.rs  grpc.rs  home.rs  ip.rs  lib.rs  local_upload_provider.rs  locales.rs  open_graph.rs  plugin.rs  postgresql.rs  s3_upload_provider.rs  settings.rs  systemfd.rs  team.rs  track.rs  upload_provider.rs
rhombus/src/internal/: account.rs  auth.rs  backend_libsql.rs  backend_postgres.rs  cache_layer.rs  challenges.rs  command_palette.rs  database.rs  discord.rs  division.rs  errors.rs  grpc.rs  health.rs  home.rs  ip.rs  local_upload_provider.rs  locales.rs  mod.rs  open_graph.rs  public.rs  router.rs  scoreboard.rs  settings.rs  static_serve.rs  team.rs  templates.rs  upload_provider.rs
rhombus/src/internal/database/: cache.rs  libsql.rs  mod.rs  postgres.rs  provider.rs
rhombus/src/internal/email/: imap.rs  mailer.rs  mailgun.rs  mod.rs  outbound_mailer.rs  provider.rs  reply_parser.rs  smtp.rs
rhombus/src/internal/grpc/: mod.rs
rhombus/src/internal/routes/: account.rs  challenges.rs  errors.rs  home.rs  meta.rs  mod.rs  public.rs  scoreboard.rs  team.rs  terms.rs
rhombus/static/: app.js  challenges.js  command-palette.js  global.js  scoreboard.js  tailwind.css  ticket.js
rhombus/tailwind/: .gitignore  merge.ts  tailwind.ts
rhombus/templates/: account-emails.html  account-set-name.html  account.html  base.html  card.html  challenge.html  challenges.html  command-palette.html  email-signin.html  email-verify.html  error.html  footer.html  home.html  icons.html  join-error-division.html  join-error-existing-team.html  join-error-max.html  layout.html  locked.html  logo.html  navbar-item.html  prompt.txt  public-team.html  public-user.html  scoreboard.html  signin.html  standing-table.html  team-divisions.html  team-members.html  team-set-division-partial.html  team-set-name.html  team-token.html  team.html  terms.html  ticket.html
rhombus/templates/account/: account-emails.html  account.html  api-key.html  api-token.html  discord-taken-error.html  email-signin.html  email-verify.html  public-user.html
rhombus/templates/challenges/: challenge-solves.html  challenge-submit.html  challenge.html  challenges.html  locked.html  ticket.html
rhombus/templates/emails/: signin.html  signin.txt  ticket-digest.html  ticket-digest.txt  verify.html  verify.txt
rhombus/templates/team/: join-error-existing-team.html  join-error-max.html  public-team.html  team-divisions.html  team-members.html  team-set-division-partial.html  team-set-name.html  team-token.html  team.html
