[workspace]
resolver = "2"
members = [
    "rhombus",
    "rhombus-build",
    "rhombus-cli",
    "rhombus-shared",
    "examples/standalone",
    "examples/plugin",
    "examples/external-plugin",
    "examples/demo",
    "examples/custom-grpc",
]

[profile.release]
strip = true
panic = "abort"
# opt-level = "s"
# lto = "fat"
# codegen-units = 1
