[package]
name = "rhombus-cli"
version = "0.1.0"
edition = "2021"
description = "Official CLI tool to interact with the Rhombus CTF framework."
authors = ["Mark Bundschuh <mark@mbund.dev>"]
license = "MPL-2.0"
repository = "https://github.com/rhombusgg/rhombus"
homepage = "https://rhombus.gg"
keywords = ["ctf", "cli"]

[dependencies]
anyhow = "1.0.94"
base32 = "0.5.1"
clap = { version = "4.5.17", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["yaml"] }
futures = "0.3.31"
inquire = "0.9.1"
rand = "0.9.2"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
rhombus-shared = { path = "../rhombus-shared" }
serde = { version = "1.0.210", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.128"
tonic = { version = "0.14.2", features = ["tls-ring", "gzip", "tls-native-roots"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.12"
urlencoding = "2.1.3"
