[package]
name = "rhombus"
version = "0.2.21"
edition = "2021"
rust-version = "1.80.0"
description = "Next generation extendable CTF framework with batteries included"
authors = ["Mark Bundschuh <mark@mbund.dev>"]
license = "MPL-2.0"
repository = "https://github.com/rhombusgg/rhombus"
homepage = "https://rhombus.gg"
keywords = ["web", "ctf", "http"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-imap = { version = "0.10.1", default-features = false, optional = true, features = [
  "runtime-tokio",
] }
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["multipart", "http2"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
config = "0.14.0"
dashmap = { version = "6.1.0", features = ["inline"] }
dotenvy = "0.15.7"
fancy-regex = "0.14.0"
fluent = "0.16.1"
futures = "0.3.31"
healthscript = "1.0.3"
intl-memoizer = "0.5.2"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.9", default-features = false, optional = true, features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "builder",
  "pool",
] }
libsql = { version = "0.6.0", optional = true }
listenfd = { version = "1.0.1", optional = true }
mail-parser = { version = "0.9.4", optional = true }
markdown = "1.0.0-alpha.21"
mime_guess = "2.0.5"
minify-html-onepass = "0.15.0"
minijinja = { version = "2.3.1", features = ["json", "loader", "speedups"] }
pin-project = "1.1.6"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false, features = [
  "rustls-tls",
  "json",
] }
resvg = "0.44.0"
ring = "0.17.8"
rust-embed = "8.5.0"
rust-s3 = { version = "0.35.1", default-features = false, optional = true, features = [
  "tokio-rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serenity = { version = "=0.12.1", features = ["chrono"] }
sqlx = { version = "0.8.2", optional = true, features = [
  "tls-rustls",
  "runtime-tokio",
  "chrono",
  "macros",
] }
thiserror = "2.0.6"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, optional = true, features = [
  "ring",
  "logging",
  "tls12",
] }
tokio-util = "0.7.12"
tower = "0.5.1"
tower_governor = "0.4.2"
tower-http = { version = "0.6.1", features = ["compression-full", "fs"] }
tower-livereload = "0.9.4"
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
webpki-roots = { version = "0.26.6", optional = true }

[dev-dependencies]
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.2", features = ["postgres"] }

[features]
default = []
postgres = ["dep:sqlx", "sqlx/postgres"]
mysql = ["dep:sqlx", "sqlx/mysql"]
libsql = ["dep:libsql"]
systemfd = ["dep:listenfd"]
imap = [
  "dep:async-imap",
  "dep:mail-parser",
  "dep:tokio-rustls",
  "dep:webpki-roots",
]
smtp = ["dep:lettre"]
s3 = ["dep:rust-s3"]
shuttle = []
testcontainers = []
internal = []
all = [
  "postgres",
  "mysql",
  "libsql",
  "imap",
  "smtp",
  "s3",
  "systemfd",
  "shuttle",
  "testcontainers",
  "internal",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
