[package]
name = "rhombus"
version = "0.2.21"
edition = "2021"
rust-version = "1.80.0"
description = "Next generation extendable CTF framework with batteries included"
authors = ["Mark Bundschuh <mark@mbund.dev>"]
license = "MPL-2.0"
repository = "https://github.com/rhombusgg/rhombus"
homepage = "https://rhombus.gg"
keywords = ["web", "ctf", "http"]

[dependencies]
argon2 = "0.6.0-rc.1"
async-imap = { version = "0.10", default-features = false, optional = true, features = [
  "runtime-tokio",
] }
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["multipart", "http2"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
base32 = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
config = "0.15.18"
dashmap = { version = "6.1.0", features = ["inline"] }
dotenvy = "0.15.7"
fancy-regex = "0.16.2"
fluent = "0.17.0"
futures = "0.3.31"
healthscript = "1.1.0"
intl-memoizer = "0.5.3"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
lettre = { version = "0.11.19", default-features = false, optional = true, features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "builder",
  "pool",
] }
libsql = { version = "0.9.24", optional = true }
listenfd = { version = "1.0.2", optional = true }
mail-parser = { version = "0.11.1", optional = true }
markdown = "1.0.0"
mime_guess = "2.0.5"
minify-html-onepass = "0.15.0"
minijinja = { version = "2.12.0", features = ["json", "loader", "speedups"] }
pin-project = "1.1.10"
poise = "0.6.1"
prost-types = "0.14.1"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
  "json",
] }
resvg = "0.45.1"
rhombus-shared = { path = "../rhombus-shared" }
ring = "0.17.14"
rust-embed = "8.7.2"
rust-s3 = { version = "0.35", default-features = false, optional = true, features = [
  "tokio-rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "=0.12.1", features = ["chrono"] }
sqlx = { version = "0.8.2", optional = true, features = [
  "tls-rustls",
  "runtime-tokio",
  "chrono",
  "macros",
] }
tonic = "0.14.2"
tonic-reflection = "0.14.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, optional = true, features = [
  "ring",
  "logging",
  "tls12",
] }
tokio-util = "0.7.16"
tower = { version = "0.5.2", features = ["timeout"] }
tower_governor = "0.8.0"
tower-http = { version = "0.6", features = [
  "compression-full",
  "fs",
  "catch-panic",
] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
webpki-roots = { version = "1.0.3", optional = true }

[dev-dependencies]
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }

[features]
default = []
postgres = ["dep:sqlx", "sqlx/postgres"]
mysql = ["dep:sqlx", "sqlx/mysql"]
libsql = ["dep:libsql"]
systemfd = ["dep:listenfd"]
imap = [
  "dep:async-imap",
  "dep:mail-parser",
  "dep:tokio-rustls",
  "dep:webpki-roots",
]
smtp = ["dep:lettre"]
s3 = ["dep:rust-s3"]
shuttle = []
testcontainers = []
internal = []
all = [
  "postgres",
  "mysql",
  "libsql",
  "imap",
  "smtp",
  "s3",
  "systemfd",
  "shuttle",
  "testcontainers",
  "internal",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
