[package]
name = "custom-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rhombus = { path = "../../rhombus", features = ["libsql", "internal"] }

[build-dependencies]
rhombus-build = { path = "../../rhombus-build" }
tonic-prost-build = "0.14.2"
