[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
rhombus = { path = "../../rhombus", features = ["libsql", "internal"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
