[package]
name = "external-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
plugin = { path = "../plugin" }
rhombus = { path = "../../rhombus", features = ["mysql"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
