[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
fluent = "0.16.1"
minijinja = "2.2.0"
rhombus = { path = "../../rhombus", features = ["postgres", "internal"] }
sqlx = { version = "0.8.2", features = [
    "tls-rustls",
    "runtime-tokio",
    "postgres",
    "chrono",
    "mysql",
] }
tracing = "0.1.40"
