[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rhombus = { path = "../../rhombus" }
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["tls-rustls", "runtime-tokio", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
