[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rhombus = { path = "../../rhombus" }
sqlx = { version = "0.7.3", features = ["tls-rustls", "runtime-tokio", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
